--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# privatekey file
+*.key
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
