Optimize the project structure, integrate the devp2p implementation of geth, complete the testing of the rlpx protocol, and establish a complete workflow

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.dll
 *.so
 *.dylib
+d2pfuzz
+D2PFuzz
 
 # Mac OS X
 .DS_Store
@@ -29,5 +31,4 @@ go.work.sum
 
 # Project output directories
 output/
-reports/
 logs/
